--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "start": "node src/server.js",
   "dev": "nodemon src/server.js",
   "test": "echo \"Error: no test specified\" && exit 1",
-  "migrate": "node migrate.js"
+  "migrate": "node migrate.js",
+  "seed": "node seed.js"
 },
   "repository": {
     "type": "git",
