--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.14.1",
     "uuid": "^11.1.0"
   },
