--- a/docs/postman/Lomir App.postman_collection.json
+++ b/docs/postman/Lomir App.postman_collection.json
@@ -26,10 +26,7 @@
 			"url": {
   "raw": "https://lomir-backend.onrender.com/api/auth/register",
   "protocol": "https",
-  "host": [
-    "https://lomir-backend.onrender",
-    "com"
-  ],
+  "host": ["lomir-backend", "onrender", "com"],
   "path": ["api", "auth", "register"]
 }
 			},
@@ -53,12 +50,9 @@
 					}
 				},
 				"url": {
-					"raw": "http://localhost:5001/api/auth/login",
-					"protocol": "http",
-					"host": [
-						"localhost"
-					],
-					"port": "5001",
+					"raw": "https://lomir-backend.onrender.com/api/auth/login",
+					"protocol": "https",
+					"host": ["lomir-backend", "onrender", "com"],
 					"path": [
 						"api",
 						"auth",
@@ -95,12 +89,9 @@
 					}
 				},
 				"url": {
-					"raw": "http://localhost:5001/api/auth/me",
-					"protocol": "http",
-					"host": [
-						"localhost"
-					],
-					"port": "5001",
+					"raw": "http://lomir-backend.onrender.com/api/auth/me",
+					"protocol": "https",
+					"host": ["lomir-backend", "onrender", "com"],
 					"path": [
 						"api",
 						"auth",
